--- a/four-card-feature-section-master/User Files/four-card-feature-final.css
+++ b/four-card-feature-section-master/User Files/four-card-feature-final.css
@@ -16,6 +16,10 @@ h2 {
     font-size: 30px;
 }   
 
+img {
+    width: 70px;
+}
+
 .container {
     max-width: 1440px; 
     margin: 0 auto;
@@ -47,6 +51,7 @@ h2 {
 
 img {
     float: right;
+    margin-top: 50px;
 }
 .card-descriptions {
     font-weight: 200;
