--- a/four-card-feature-section-master/User Files/four-card-feature-final.css
+++ b/four-card-feature-section-master/User Files/four-card-feature-final.css
@@ -7,7 +7,11 @@ body {
     font-weight: 200;
     margin-top: 10px;
     font-size: 30px;
-    line-height: 30px;
+    line-height: 40px;
+}
+
+span {
+    font-weight: 600;
 }
 
 h2 {
@@ -22,13 +26,15 @@ img {
 
 /* Should I have used Flexbox here or Grid? */
 
-.container {
-    max-width: 1440px; 
-    margin: 0 auto;
+main {
+    max-width: 1200px; 
+    position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
+    justify-content: center;
+    margin: 0 auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 25px;
     grid-template-areas: 
     ". team-builder ."
     "supervisor team-builder calculator"
@@ -37,13 +43,10 @@ img {
 }
 
 .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            width: 80%;
-            height: 250px;
-            border-radius: 5px;
-            justify-self: center;
-            padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    padding: 20px;
 }
 
 .card-headings {
@@ -57,8 +60,8 @@ but I am not sure how. */
 
 img {
     float: right;
-    margin-top: 50px;
-}
+    margin-top: 15%;
+}   
 .card-descriptions {
     font-weight: 200;
     font-size: 15px;
@@ -67,7 +70,6 @@ img {
 #supervisor {
     border-top: 5px solid cyan;
     grid-area: supervisor;
-    justify-self: end;
 }
 
 #team-builder {
@@ -83,10 +85,9 @@ img {
 #calculator {
     border-top: 5px solid blue;
     grid-area: calculator;
-    justify-self: start;
 }
 
-.intro {
+header {
     text-align: center;
     padding: 50px;
     width: 500px;
