--- a/four-card-feature-section-master/User Files/four-card-feature-final.css
+++ b/four-card-feature-section-master/User Files/four-card-feature-final.css
@@ -95,7 +95,7 @@ header {
 }
 
 @media (max-width: 375px) {
-    .container {
+    header {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -106,9 +106,9 @@ header {
     }
     img {
         float: right;
-        margin-top: 40px;
+        margin-top: 10%;
     }
-    .intro {
+    main {
         margin: 0 auto;
         text-align: center;
         width: 80%;
@@ -117,13 +117,6 @@ header {
         font-weight: 200;
         margin-top: 10px;
         font-size: 25px;
-        line-height: 30px;
-    }
-
-    #title {
-        font-weight: 200;
-        margin-top: 10px;
-        font-size: 20px;
         line-height: 30px;
     }
     
