--- a/four-card-feature-section-master/User Files/four-card-feature-final.css
+++ b/four-card-feature-section-master/User Files/four-card-feature-final.css
@@ -95,7 +95,7 @@ header {
 }
 
 @media (max-width: 375px) {
-    header {
+    main {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -106,9 +106,9 @@ header {
     }
     img {
         float: right;
-        margin-top: 10%;
+        margin-top: 40px;
     }
-    main {
+    header {
         margin: 0 auto;
         text-align: center;
         width: 80%;
@@ -117,6 +117,13 @@ header {
         font-weight: 200;
         margin-top: 10px;
         font-size: 25px;
+        line-height: 30px;
+    }
+
+    #title {
+        font-weight: 200;
+        margin-top: 10px;
+        font-size: 20px;
         line-height: 30px;
     }
     
